0.2.x (#4)
* Initital modifier scheme changes

* Embedded modifier interface changes

* Embedded modifier implementation changes

* Finalizing modifier refactoring

* Added .isNull() and .isNotNull() routines for @OneToOne relations

* Version labels

* Added select and order by sub field

* _self is working for the root as well