@@ -105,14 +105,14 @@ class QueryEnrichTest extends BaseTest {
 
     @Test
     void testSimpleProjection() {
-        checkQuery("select u.amount as amount,u.title as title from net.binis.codegen.Test u ",
-                () -> net.binis.codegen.Test.find().by(TestProjection.class).get());
+        checkQuery("select u.amount as amount,u.title as title from net.binis.codegen.Test2 u ",
+                () -> Test2.find().by(TestProjection.class).get());
     }
 
     @Test
     void testComplexProjection() {
-        checkQuery("select u.parent.amount as parentAmount,u.parent.parent.amount as parentParentAmount,u.sub.subAmount as subSubAmount,u.sub.subtitle as subSubtitle from net.binis.codegen.Test u ",
-                () -> net.binis.codegen.Test.find().by(TestProjectionComplex.class).get());
+        checkQuery("select u.parent.amount as parentAmount,u.parent.parent.amount as parentParentAmount,u.sub.subAmount as subSubAmount,u.sub.subtitle as subSubtitle from net.binis.codegen.Test2 u ",
+                () -> Test2.find().by(TestProjectionComplex.class).get());
     }
 
     @Test
@@ -123,158 +123,168 @@ class QueryEnrichTest extends BaseTest {
 
     @Test
     void testAsync() {
-        var job = net.binis.codegen.Test.find().asyncC(t -> log.info("Testing instantiation of AsyncDispatcher"));
+        var job = Test2.find().asyncC(t -> log.info("Testing instantiation of AsyncDispatcher"));
         job.join();
     }
 
     @Test
     void enrichQueryTest() {
+
+        checkQuery("select u as self from net.binis.codegen.Sub u ",
+                () -> Sub.find().select()._self().get());
+
+        checkQuery("select u as self from net.binis.codegen.Sub u  order by u desc",
+                () -> Sub.find().select()._self().where().order()._self().desc().get());
+
+        checkQuery("select u.parent.parent.parent as parent from net.binis.codegen.Test2 u  order by u.parent.parent.parent desc",
+                () -> Test2.find().select().parent().parent().parent()._self().where().order().parent().parent().parent()._self().desc().get());
+
         checkQuery("select u.subAmount as subAmount from net.binis.codegen.Sub u ",
                 () -> Sub.find().select().subAmount().get());
 
         checkQuery("select u.subAmount as subAmount,u.subtitle as subtitle from net.binis.codegen.Sub u where (u.subAmount > ?1)", List.of(5.0),
                 () -> Sub.find().select().subAmount().subtitle().where().subAmount().greater(5.0).get());
 
-        checkQuery("select u.subAmount as subAmount,u.subtitle as subtitle from net.binis.codegen.Sub u where (u.subtitle = ?1) and  (u.subAmount in (select s0.amount as amount from net.binis.codegen.Test s0 where (s0.title = ?2))) ", List.of("test", "asd"),
-                () -> Sub.find().select().subAmount().subtitle().where().subtitle("test").and().subAmount().in(net.binis.codegen.Test.find().select().amount().where().title("asd")).get());
+        checkQuery("select u.subAmount as subAmount,u.subtitle as subtitle from net.binis.codegen.Sub u where (u.subtitle = ?1) and  (u.subAmount in (select s0.amount as amount from net.binis.codegen.Test2 s0 where (s0.title = ?2))) ", List.of("test", "asd"),
+                () -> Sub.find().select().subAmount().subtitle().where().subtitle("test").and().subAmount().in(Test2.find().select().amount().where().title("asd")).get());
 
         checkQuery("from net.binis.codegen.Sub u where (u.subAmount = ?1)", List.of(5.9),
                 () -> Sub.find().by().subAmount(5.9).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.parent.parent.parent.title = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().parent().parent().parent().title().equal("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.parent.parent.parent.title = ?1)", List.of("asd"),
+                () -> Test2.find().by().parent().parent().parent().title().equal("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.title = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().title("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.title = ?1)", List.of("asd"),
+                () -> Test2.find().by().title("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.title = ?1) order by  u.title", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().title("asd").order().title().get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.title = ?1) order by  u.title", List.of("asd"),
+                () -> Test2.find().by().title("asd").order().title().get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.title = ?1) order by  u.title asc", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().title("asd").order().title().asc().get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.title = ?1) order by  u.title asc", List.of("asd"),
+                () -> Test2.find().by().title("asd").order().title().asc().get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.title = ?1) order by  u.title asc, u.title desc", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().title("asd").order().title().asc().title().desc().get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.title = ?1) order by  u.title asc, u.title desc", List.of("asd"),
+                () -> Test2.find().by().title("asd").order().title().asc().title().desc().get());
 
-        checkQuery("from net.binis.codegen.Test u  order by  u.title", Collections.emptyList(),
-                () -> net.binis.codegen.Test.find().by().order().title().get());
+        checkQuery("from net.binis.codegen.Test2 u  order by  u.title", Collections.emptyList(),
+                () -> Test2.find().by().order().title().get());
 
-        checkQuery("from net.binis.codegen.Test u  order by  u.title asc, u.amount desc", Collections.emptyList(),
-                () -> net.binis.codegen.Test.find().by().order().title().asc().amount().desc().get());
+        checkQuery("from net.binis.codegen.Test2 u  order by  u.title asc, u.amount desc", Collections.emptyList(),
+                () -> Test2.find().by().order().title().asc().amount().desc().get());
 
-        checkQuery("from net.binis.codegen.Test u where not  (u.title like ?1)", List.of("%asd"),
-                () -> net.binis.codegen.Test.find().by().not().title().like("%asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where not  (u.title like ?1)", List.of("%asd"),
+                () -> Test2.find().by().not().title().like("%asd").get());
 
-        checkQuery("select count(*) from net.binis.codegen.Test u ", Collections.emptyList(), 0L,
-                () -> net.binis.codegen.Test.find().by().count());
+        checkQuery("select count(*) from net.binis.codegen.Test2 u ", Collections.emptyList(), 0L,
+                () -> Test2.find().by().count());
 
-        checkQuery("from net.binis.codegen.Test u where (u.parent.title = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().parent().title("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.parent.title = ?1)", List.of("asd"),
+                () -> Test2.find().by().parent().title("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.parent.title = ?1) or  (u.title = ?2)", List.of("asd", "asd"),
-                () -> net.binis.codegen.Test.find().by().parent().title("asd").or().title().equal("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.parent.title = ?1) or  (u.title = ?2)", List.of("asd", "asd"),
+                () -> Test2.find().by().parent().title("asd").or().title().equal("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.sub.subtitle = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().sub().subtitle("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.sub.subtitle = ?1)", List.of("asd"),
+                () -> Test2.find().by().sub().subtitle("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.parent.sub.subtitle = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().parent().sub().subtitle("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.parent.sub.subtitle = ?1)", List.of("asd"),
+                () -> Test2.find().by().parent().sub().subtitle("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.parent.parent.sub.subtitle = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().parent().parent().sub().subtitle().equal("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.parent.parent.sub.subtitle = ?1)", List.of("asd"),
+                () -> Test2.find().by().parent().parent().sub().subtitle().equal("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.parent is null)", Collections.emptyList(),
-                () -> net.binis.codegen.Test.find().by().parent(null).get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.parent is null)", Collections.emptyList(),
+                () -> Test2.find().by().parent(null).get());
 
-        checkQuery("from net.binis.codegen.Test u where (lower(u.title) like ?1)", List.of("%asd"),
-                () -> net.binis.codegen.Test.find().by().lower().title().like("%asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (lower(u.title) like ?1)", List.of("%asd"),
+                () -> Test2.find().by().lower().title().like("%asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (lower(u.title) = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().lower().title("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (lower(u.title) = ?1)", List.of("asd"),
+                () -> Test2.find().by().lower().title("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (lower(u.parent.parent.title) = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().lower().parent().parent().title("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (lower(u.parent.parent.title) = ?1)", List.of("asd"),
+                () -> Test2.find().by().lower().parent().parent().title("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (substr(u.parent.parent.title, ?1) = ?2)", List.of(5, "asd"),
-                () -> net.binis.codegen.Test.find().by().substring(5).parent().parent().title("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (substr(u.parent.parent.title, ?1) = ?2)", List.of(5, "asd"),
+                () -> Test2.find().by().substring(5).parent().parent().title("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (substr(u.parent.parent.title, ?1, ?2) = ?3)", List.of(5, 10, "asd"),
-                () -> net.binis.codegen.Test.find().by().substring(5, 10).parent().parent().title("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (substr(u.parent.parent.title, ?1, ?2) = ?3)", List.of(5, 10, "asd"),
+                () -> Test2.find().by().substring(5, 10).parent().parent().title("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (trim(u.parent.parent.title) = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().by().trim().parent().parent().title("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (trim(u.parent.parent.title) = ?1)", List.of("asd"),
+                () -> Test2.find().by().trim().parent().parent().title("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (replace(u.parent.parent.title, ?1, ?2) = ?3)", List.of("some", "someother", "asd"),
-                () -> net.binis.codegen.Test.find().by().replace("some", "someother").parent().parent().title("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (replace(u.parent.parent.title, ?1, ?2) = ?3)", List.of("some", "someother", "asd"),
+                () -> Test2.find().by().replace("some", "someother").parent().parent().title("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u where (length(u.parent.parent.title) > ?1)", List.of(5L),
-                () -> net.binis.codegen.Test.find().by().parent().parent().title().length().greater(5L).get());
+        checkQuery("from net.binis.codegen.Test2 u where (length(u.parent.parent.title) > ?1)", List.of(5L),
+                () -> Test2.find().by().parent().parent().title().length().greater(5L).get());
 
-        checkQuery("delete from net.binis.codegen.Test u where (length(u.parent.parent.title) > ?1)", List.of(5L),
-                () -> net.binis.codegen.Test.find().by().parent().parent().title().length().greater(5L).delete());
+        checkQuery("delete from net.binis.codegen.Test2 u where (length(u.parent.parent.title) > ?1)", List.of(5L),
+                () -> Test2.find().by().parent().parent().title().length().greater(5L).delete());
 
-        checkQuery("from net.binis.codegen.Test u where (title = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().query("from net.binis.codegen.Test u where (title = ?1)").params(List.of("asd")).get());
+        checkQuery("from net.binis.codegen.Test2 u where (title = ?1)", List.of("asd"),
+                () -> Test2.find().query("from net.binis.codegen.Test2 u where (title = ?1)").params(List.of("asd")).get());
 
-        checkQuery("from net.binis.codegen.Test u where (title = ?1)", List.of("asd"),
-                () -> net.binis.codegen.Test.find().query("from net.binis.codegen.Test u where (title = ?1)").param("asd").get());
+        checkQuery("from net.binis.codegen.Test2 u where (title = ?1)", List.of("asd"),
+                () -> Test2.find().query("from net.binis.codegen.Test2 u where (title = ?1)").param("asd").get());
 
-        checkQuery("from net.binis.codegen.Test u  order by  title ", Collections.emptyList(),
-                () -> net.binis.codegen.Test.find().by().order().script("title").get());
+        checkQuery("from net.binis.codegen.Test2 u  order by  title ", Collections.emptyList(),
+                () -> Test2.find().by().order().script("title").get());
 
-        checkQuery("from net.binis.codegen.Test u where length(title) > 5  and  (u.amount > 10)  order by  title ", Collections.emptyList(),
-                () -> net.binis.codegen.Test.find().by().script("length(title) > 5").and().amount().script("> 10").order().script("title").get());
+        checkQuery("from net.binis.codegen.Test2 u where length(title) > 5  and  (u.amount > 10)  order by  title ", Collections.emptyList(),
+                () -> Test2.find().by().script("length(title) > 5").and().amount().script("> 10").order().script("title").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.amount = ?1) and  length(title) > 5  order by  title ", List.of(5.0),
-                () -> net.binis.codegen.Test.find().by().amount(5.0).and().script("length(title) > 5").order().script("title").get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.amount = ?1) and  length(title) > 5  order by  title ", List.of(5.0),
+                () -> Test2.find().by().amount(5.0).and().script("length(title) > 5").order().script("title").get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.amount between ?1 and ?2)", List.of(5.0, 6.0),
-                () -> net.binis.codegen.Test.find().by().amount().between(5.0, 6.0).get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.amount between ?1 and ?2)", List.of(5.0, 6.0),
+                () -> Test2.find().by().amount().between(5.0, 6.0).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.amount = ?1) and  (length(u.parent.parent.title) > ?2)", List.of(5.0, 5L),
-                () -> net.binis.codegen.Test.find().by(true, query -> query.amount(5).and()).parent().parent().title().length().greater(5L).get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.amount = ?1) and  (length(u.parent.parent.title) > ?2)", List.of(5.0, 5L),
+                () -> Test2.find().by(true, query -> query.amount(5).and()).parent().parent().title().length().greater(5L).get());
 
-        checkQuery("from net.binis.codegen.Test u where (length(u.parent.parent.title) > ?1)", List.of(5L),
-                () -> net.binis.codegen.Test.find().by(false, query -> query.amount(5).and()).parent().parent().title().length().greater(5L).get());
+        checkQuery("from net.binis.codegen.Test2 u where (length(u.parent.parent.title) > ?1)", List.of(5L),
+                () -> Test2.find().by(false, query -> query.amount(5).and()).parent().parent().title().length().greater(5L).get());
 
-        checkQuery("from net.binis.codegen.Test u where (length(u.parent.parent.title) > ?1) and  (u.amount = ?2)", List.of(5L, 5.0),
-                () -> net.binis.codegen.Test.find().by().parent().parent().title().length().greater(5L)
+        checkQuery("from net.binis.codegen.Test2 u where (length(u.parent.parent.title) > ?1) and  (u.amount = ?2)", List.of(5L, 5.0),
+                () -> Test2.find().by().parent().parent().title().length().greater(5L)
                         ._if(true, query -> query.and().amount(5))
                         ._else(query -> query.and().amount(6))
                         .get());
 
-        checkQuery("from net.binis.codegen.Test u where (length(u.parent.parent.title) > ?1) and  (u.amount = ?2)", List.of(5L, 6.0),
-                () -> net.binis.codegen.Test.find().by().parent().parent().title().length().greater(5L)._if(false, query -> query.and().amount(5))._else(query -> query.and().amount(6)).get());
+        checkQuery("from net.binis.codegen.Test2 u where (length(u.parent.parent.title) > ?1) and  (u.amount = ?2)", List.of(5L, 6.0),
+                () -> Test2.find().by().parent().parent().title().length().greater(5L)._if(false, query -> query.and().amount(5))._else(query -> query.and().amount(6)).get());
 
         checkQuery("select avg(u.subAmount) from net.binis.codegen.Sub u where (u.subAmount = ?1)", List.of(5.0),
                 () -> Sub.find().aggregate().avg().subAmount().where().subAmount(5).get());
 
-        checkQuery("from net.binis.codegen.Test u where (?1 member of u.items) and  (?2 not member of u.items) and  (u.items is not empty) and  (u.items is empty)", List.of(5L, 6L),
-                () -> net.binis.codegen.Test.find().by().items().contains(5L).and().items().notContains(6L).and().items().isNotEmpty().and().items().isEmpty().get());
+        checkQuery("from net.binis.codegen.Test2 u where (?1 member of u.items) and  (?2 not member of u.items) and  (u.items is not empty) and  (u.items is empty)", List.of(5L, 6L),
+                () -> Test2.find().by().items().contains(5L).and().items().notContains(6L).and().items().isNotEmpty().and().items().isEmpty().get());
 
-        checkQuery("from net.binis.codegen.Test u where (?1 member of u.items)", List.of(5L),
-                () -> net.binis.codegen.Test.find().by().items().contains(5L).get());
+        checkQuery("from net.binis.codegen.Test2 u where (?1 member of u.items)", List.of(5L),
+                () -> Test2.find().by().items().contains(5L).get());
 
-        checkQuery("from net.binis.codegen.Test u where (0 <> 0) ", Collections.emptyList(),
-                () -> net.binis.codegen.Test.find().by().title().in(Collections.emptyList()).get());
+        checkQuery("from net.binis.codegen.Test2 u where (0 <> 0) ", Collections.emptyList(),
+                () -> Test2.find().by().title().in(Collections.emptyList()).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.amount = ?1) and  (0 <> 0) ", List.of(5.0),
-                () -> net.binis.codegen.Test.find().by().amount(5.0).and().title().in(Collections.emptyList()).get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.amount = ?1) and  (0 <> 0) ", List.of(5.0),
+                () -> Test2.find().by().amount(5.0).and().title().in(Collections.emptyList()).get());
 
-        checkQuery("from net.binis.codegen.Test u where (0 <> 0)  and  (u.amount = ?1)", List.of(5.0),
-                () -> net.binis.codegen.Test.find().by().title().in(Collections.emptyList()).and().amount(5.0).get());
+        checkQuery("from net.binis.codegen.Test2 u where (0 <> 0)  and  (u.amount = ?1)", List.of(5.0),
+                () -> Test2.find().by().title().in(Collections.emptyList()).and().amount(5.0).get());
 
-        checkQuery("from net.binis.codegen.Test u where not  (0 <> 0)  and  (u.amount = ?1) and  (u.sub.subAmount = ?2)", List.of(5.0, 6.0),
-                () -> net.binis.codegen.Test.find().by().not().title().in(Collections.emptyList()).and().amount(5.0).and().sub().subAmount(6.0).get());
+        checkQuery("from net.binis.codegen.Test2 u where not  (0 <> 0)  and  (u.amount = ?1) and  (u.sub.subAmount = ?2)", List.of(5.0, 6.0),
+                () -> Test2.find().by().not().title().in(Collections.emptyList()).and().amount(5.0).and().sub().subAmount(6.0).get());
 
-        checkQuery("from net.binis.codegen.Test u where (0 <> 0)  and  (u.amount = ?1) and  (u.sub.subAmount = ?2)", List.of(5.0, 6.0),
-                () -> net.binis.codegen.Test.find().by().title().in(Collections.emptyList()).and().amount(5.0).and().sub().subAmount(6.0).get());
+        checkQuery("from net.binis.codegen.Test2 u where (0 <> 0)  and  (u.amount = ?1) and  (u.sub.subAmount = ?2)", List.of(5.0, 6.0),
+                () -> Test2.find().by().title().in(Collections.emptyList()).and().amount(5.0).and().sub().subAmount(6.0).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.sub.subAmount = ?1) and  not  (0 <> 0)  or  (u.amount = ?2) and  (u.sub.subAmount = ?3)", List.of(6.0, 5.0, 6.0),
-                () -> net.binis.codegen.Test.find().by().sub().subAmount(6.0).and().not().title().in(Collections.emptyList()).or().amount(5.0).and().sub().subAmount(6.0).get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.sub.subAmount = ?1) and  not  (0 <> 0)  or  (u.amount = ?2) and  (u.sub.subAmount = ?3)", List.of(6.0, 5.0, 6.0),
+                () -> Test2.find().by().sub().subAmount(6.0).and().not().title().in(Collections.emptyList()).or().amount(5.0).and().sub().subAmount(6.0).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.sub.subAmount = ?1) and  (0 <> 0)  or  (u.amount = ?2) and  (u.sub.subAmount = ?3)", List.of(6.0, 5.0, 6.0),
-                () -> net.binis.codegen.Test.find().by().sub().subAmount(6.0).and().title().in(Collections.emptyList()).or().amount(5.0).and().sub().subAmount(6.0).get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.sub.subAmount = ?1) and  (0 <> 0)  or  (u.amount = ?2) and  (u.sub.subAmount = ?3)", List.of(6.0, 5.0, 6.0),
+                () -> Test2.find().by().sub().subAmount(6.0).and().title().in(Collections.emptyList()).or().amount(5.0).and().sub().subAmount(6.0).get());
 
         checkQuery("select u, sum(j0.subAmount),count(j1.subtitle) from net.binis.codegen.TestModify u join u.subs j0 join u.subs j1 where (j0.subtitle is null)  and  (j1.subAmount is null)  or  (u.amount is not null) group by u  order by sum(j0.subAmount) asc,count(j1.subtitle) desc, u.title", Collections.emptyList(),
                 () -> TestModify.find().by().subs()
@@ -330,10 +340,10 @@ class QueryEnrichTest extends BaseTest {
                         .subs().contains(sub)
                         .get());
 
-        var query = net.binis.codegen.Test.find().by().items().contains(5L).prepare();
-        checkQuery("from net.binis.codegen.Test u where (?1 member of u.items)", List.of(5L), query::get);
+        var query = Test2.find().by().items().contains(5L).prepare();
+        checkQuery("from net.binis.codegen.Test2 u where (?1 member of u.items)", List.of(5L), query::get);
 
-        checkQuery("from net.binis.codegen.Test u where (?1 member of u.items)", List.of(6L),
+        checkQuery("from net.binis.codegen.Test2 u where (?1 member of u.items)", List.of(6L),
                 () -> query.param(0, 6L));
 
         checkQuery("select distinct u from net.binis.codegen.TestModify u join u.subs j0 join fetch u.subs j1 where (u.amount = ?1) and  (0 <> 0)   ", List.of(5.0),
@@ -374,25 +384,37 @@ class QueryEnrichTest extends BaseTest {
         checkQuery("select distinct u.subAmount  from net.binis.codegen.Sub u ",
                 () -> Sub.find().aggregate().distinct().subAmount().get());
 
-        checkQuery("select u from net.binis.codegen.Test u join fetch u.sub j0 ",
-                () -> net.binis.codegen.Test.find().by().sub().fetch().get());
+        checkQuery("select u from net.binis.codegen.Test2 u join fetch u.sub j0 ",
+                () -> Test2.find().by().sub().fetch().get());
 
-        checkQuery("select u from net.binis.codegen.Test u left join fetch u.sub j0 ",
-                () -> net.binis.codegen.Test.find().by().sub().leftFetch().get());
+        checkQuery("select u from net.binis.codegen.Test2 u left join fetch u.sub j0 ",
+                () -> Test2.find().by().sub().leftFetch().get());
 
         var dummy = new SubImpl();
-        checkQuery("from net.binis.codegen.Test u where (u.sub in ?1)", List.of(List.of(dummy)),
-                () -> net.binis.codegen.Test.find().by().sub().in(List.of(dummy)).get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.sub in ?1)", List.of(List.of(dummy)),
+                () -> Test2.find().by().sub().in(List.of(dummy)).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.sub in (select s0 from net.binis.codegen.Sub s0 )) ",
-                () -> net.binis.codegen.Test.find().by().sub().in(Sub.find().by()).get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.sub in (select s0 from net.binis.codegen.Sub s0 )) ",
+                () -> Test2.find().by().sub().in(Sub.find().by()).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.sub is null)",
-                () -> net.binis.codegen.Test.find().by().sub().isNull().get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.sub is null)",
+                () -> Test2.find().by().sub().isNull().get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.sub is not null)",
-                () -> net.binis.codegen.Test.find().by().sub().isNotNull().get());
+        checkQuery("from net.binis.codegen.Test2 u where (u.sub is not null)",
+                () -> Test2.find().by().sub().isNotNull().get());
 
+        checkQuery("select u.sub as sub,u.amount as amount,u.sub.subAmount as subAmount from net.binis.codegen.Test2 u where (u.sub.subAmount is not null) order by u.sub desc,u.sub.subAmount asc",
+                () -> Test2.find()
+                        .select()
+                        .sub()._self()
+                        .amount()
+                        .sub().subAmount()
+                        .where()
+                        .sub().subAmount().isNotNull()
+                        .order()
+                        .sub()._self().desc()
+                        .sub().subAmount().asc()
+                        .get());
     }
 
     private void checkQuery(String expected, List<Object> params, Runnable query) {
